--- a/package.json
+++ b/package.json
@@ -1,19 +1,30 @@
 {
   "name": "dark-mode-sample",
   "version": "1.0.0",
-  "description": "",
+  "description": "Sample DarkMode Page",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build:dev": "gulp build --development",
+    "build": "gulp build --production",
+    "dev": "gulp dev"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/fiotto/dark-mode-sample.git"
   },
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/fiotto/dark-mode-sample/issues"
   },
-  "homepage": "https://github.com/fiotto/dark-mode-sample#readme"
+  "homepage": "https://github.com/fiotto/dark-mode-sample#readme",
+  "devDependencies": {
+    "gulp": "^4.0.2",
+    "gulp-connect": "^5.7.0",
+    "gulp-mode": "^1.0.2",
+    "gulp-pug": "^4.0.1",
+    "gulp-rename": "^2.0.0",
+    "gulp-sass": "^4.1.0",
+    "gulp-sourcemaps": "^3.0.0"
+  }
 }
